Shang New Live/src/objects/Lease_POS__c.object
<CustomObject>
    <fields>
        <fullName>Application_Id__c</fullName>
        <inlineHelpText>POS application id
POS-01 for 15 mins submission
POS-01D for Daily submission</inlineHelpText>
        <label>Application Id</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>POS-01</fullName>
                </value>
                <value>
                    <fullName>POS-01D</fullName>
                </value>
                <value>
                    <fullName>POS-01M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Connected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Connected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Email_1__c</fullName>
        <label>Contact Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Email_2__c</fullName>
        <label>Contact Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generate_POS_ID__c</fullName>
        <inlineHelpText>Please select &quot;Yes&quot; if new POS Id required. Otherwise, please select &quot;No&quot; and key in existing POS Id at POS Id field.</inlineHelpText>
        <label>Generate POS ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lease_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Unit</label>
        <referenceTo>Lease_Unit__c</referenceTo>
        <relationshipLabel>Lease POS</relationshipLabel>
        <relationshipName>Lease_POS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POS_Submission_Frequency__c</fullName>
        <label>POS Submission Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>15 mins</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POS_Submission_Type__c</fullName>
        <label>POS Submission Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Web Service API</fullName>
                </value>
                <value>
                    <fullName>CSV File</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POS_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POS Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lease POS</relationshipLabel>
        <relationshipName>Lease_POS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Name_Text__c</fullName>
        <description>This field is populated by W/F rule</description>
        <inlineHelpText>This field is populated by W/F rule</inlineHelpText>
        <label>Property Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Short_Code__c</fullName>
        <formula>Lease_Unit__r.Property_Short_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Short Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Lease POS</relationshipLabel>
        <relationshipName>Lease_POS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenant_Trade_Category__c</fullName>
        <formula>TEXT( Lease_Unit__r.Lease_Agreement_No__r.Tenant__r.Trade_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tenant Trade Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant__c</fullName>
        <formula>Lease_Unit__r.Lease_Agreement_No__r.Tenant__r.Name</formula>
        <label>Tenant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <formula>Lease_Unit__r.Unit__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit</label>
        <type>Text</type>
    </fields>
    <label>Lease POS</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>POS Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lease POS</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>